--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,17 @@
 
 
-
+#mysql
 spring.datasource.url=jdbc:mysql://localhost:3306/springmvcdb?useUnicode=true&amp;characterEncoding=utf8&amp;useSSL=true
 spring.datasource.username=root
 spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
+#server
 server.port=8090
 server.session-timeout=30
 server.tomcat.uri-encoding=UTF-8
 
+#page
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 spring.thymeleaf.cache=false
